# subgradient_projection_for_sdp

./: .gitignore  .pre-commit-config.yaml  LICENSE  README.md  pyproject.toml  requirements.txt  setup.py
cpsdppy/: __init__.py  _version.py  config.py  linalg.py  logging_helper.py  sdpa.py  test_linalg.py  toy.py
cpsdppy/mip_solver_extensions/: __init__.py  cuts.py  lazy_cuts.py  linear_cuts.py  lmi_cuts.py  (+2 more)
data/: .gitignore  download.sh  download_sdplib.sh  setup_julia_data.sh
examples/: analyse_result.py  circle_sdp.py  circle_sdp2.py  compile.py  cosmo_solver.py  quadratic_function.py  run_cosmo.jl  run_cosmo_and_evaluate_iteration.jl  run_cosmo_for_5_mins.jl  run_cosmo_with_iteration_limit.jl  run_experiments.py  run_mosek_without_feasibility.py  sdpa.py  sdpa_experiments.py  sdpa_experiments_with_mosek.py  sdpa_summary.py  solve_sdpa.py  solve_sdpa_with_mosek.py  solve_simple_2d_problem.py
extensions/indexremove/: CMakeLists.txt  README.md
extensions/indexremove/include/indexremove/: indexremove.h
extensions/indexremove/src/: main.cpp
extensions/indexremove/tests/: test.py
scripts/: activate.sh  analyse.py  build.sh  clean.sh  evaluate_solution.py  populate_optimal_objective_values_of_sdplib.py  read_sdpa_file.jl  recover_feasibility.py  run_all.sh  run_commands.py  run_cosmo_and_evaluate_iterates.sh  run_cosmo_for_5_mins.sh  run_cosmo_with_iteration_limit.sh  run_feasibility_recovery.sh  run_unittests.sh  set_up.sh  set_up_cosmo.sh  setup_cosmo.sh  solve.py  solve_to_tight_tol.py
tests/: test_doctest.py
tests_package/: test_doctest.py
(+67 files in other folders)
